--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
             },
             {
                 id: 13,
-                name: "Eu Amo Café",
+                name: "Eu Amo Café Pro Max",
                 category: "educação",
                 icon: "data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>☕</text></svg>",
                 images: [],
@@ -580,6 +580,24 @@
                 featured: true,
                 link: "https://eu-amo-cafe-pro-max.surge.sh/",
                 qr: "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://eu-amo-cafe-pro-max.surge.sh/"
+            },
+            {
+                id: 14,
+                name: "Kanban",
+                category: "educação",
+                icon: "data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📋</text></svg>",
+                images: [],
+                description: "Organize projetos e tarefas visualmente com o método Kanban.",
+                longDescription: "Gerencie fluxos de trabalho, acompanhe o progresso de atividades escolares e pessoais através de quadros visuais intuitivos. Aumente sua produtividade.",
+                developer: "Prof Digital",
+                size: "Web",
+                version: "2026.0",
+                rating: 4.8,
+                downloads: "150+",
+                price: "Grátis",
+                featured: true,
+                link: "https://escolasergio4-lang.github.io/kanban2026/",
+                qr: "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://escolasergio4-lang.github.io/kanban2026/"
             }
         ];
 
