--- a/index.html
+++ b/index.html
@@ -598,6 +598,24 @@
                 featured: true,
                 link: "https://escolasergio4-lang.github.io/kanban2026/",
                 qr: "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://escolasergio4-lang.github.io/kanban2026/"
+            },
+            {
+                id: 15,
+                name: "Planeja Inclusão",
+                category: "educação",
+                icon: "data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧩</text></svg>",
+                images: [],
+                description: "Ferramenta para elaboração de PEIs com base legal e neurociência.",
+                longDescription: "Ferramenta assistiva para professores construírem o Plano de Ensino Individualizado (PEI), cruzando dados do aluno com estratégias da Neurociência e Legislação Brasileira.",
+                developer: "Prof Digital",
+                size: "Web",
+                version: "2026.1",
+                rating: 4.9,
+                downloads: "500+",
+                price: "Grátis",
+                featured: true,
+                link: "https://escolasergio4-lang.github.io/planoinclusao/",
+                qr: "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://escolasergio4-lang.github.io/planoinclusao/"
             }
         ];
 
