--- a/index.html
+++ b/index.html
@@ -551,8 +551,8 @@
                 category: "educação",
                 icon: "data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🪟</text></svg>",
                 images: [],
-                description: "Instalador para Windows. Utilize offline.",
-                longDescription: "Baixe o instalador para Windows e utilize as ferramentas sem depender de internet. Uma solução robusta para ambientes sem conectividade.",
+                description: "Instalador para Windows.",
+                longDescription: "Baixe o instalador para Windows do App Gerador IA. Uma solução robusta para ambientes com ou sem conectividade.",
                 developer: "Prof Digital",
                 size: "EXE",
                 version: "Win",
