--- a/index.html
+++ b/index.html
@@ -635,6 +635,24 @@
                 link: "https://escolasergio4-lang.github.io/criaeventos/",
                 androidLink: "https://drive.google.com/file/d/1CDomrkAUrYVjPqCa4ZYWaR0JwGFDfyNC/view?usp=sharing",
                 qr: "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://escolasergio4-lang.github.io/criaeventos/"
+            },
+            {
+                id: 17,
+                name: "Trilhas Digitais",
+                category: "educação",
+                icon: "data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👣</text></svg>",
+                images: [],
+                description: "Plataforma de trilhas de aprendizagem interativas.",
+                longDescription: "Uma ferramenta inovadora para criar e percorrer trilhas de aprendizagem digitais, gamificando o processo educativo e engajando os estudantes.",
+                developer: "Prof Digital",
+                size: "Web",
+                version: "1.0",
+                rating: 4.8,
+                downloads: "1+",
+                price: "Grátis",
+                featured: true,
+                link: "https://trillhas-digitais-app.surge.sh/",
+                qr: "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://trillhas-digitais-app.surge.sh/"
             }
         ];
 
